Update ClaimContext.java